# jarvis

./: README.md  pyproject.toml  requirements.txt  setup.py
jarvis/: firstresults.csv  jarvis.py
jarvis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
